<resources>
    <string name="app_name">KHAzANA</string>
    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">Close Drawer</string>
    <string name="forgot_password"><u>Forgot Password?</u></string>
    <string name="don_t_have_an_account_sign_up_now"><u>Don\'t have an account? Sign up now</u></string>
    <string name="login_preference_file_name">LogIn Preferences</string>
    <string name="sort">Sort</string>
    <string name="ordering_from">Ordering From:</string>
    <string name="restaurant">Restaurant</string>
    <string name="place_order_total_rs_500">Place Order (Total: Rs.500)</string>
    <string name="enter_your_registered_mobile_number_and_email_below">Enter your registered mobile number and email below:</string>
    <string name="email_address">Email Address</string>
    <string name="next">Next</string>
    <string name="mobile_number_10_digits">Mobile Number(10 digits)</string>
    <string name="password">Password</string>
    <string name="log_in">LOG IN</string>
    <string name="name_min_3_characters">Name(Min. 3 characters)</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="password_min_4_characters">Password (Min. 4 characters)</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="khazana">KHAzANA</string>
    <string name="phone_number">Phone Number</string>
    <string name="q1_how_much_is_your_delivery_fee">Q1. How much is your delivery fee?</string>
    <string name="a1">A1. Our delivery fee starts at Rs.29 within the first kilometer of driving distance from the merchant to your location, with an additional Rs.2 per kilometer for the next 4 kilometers, and Rs.5 per kilometer for the 6th to the 20th kilometer. For example: 3 kilometers = Rs.33, 5 kilometers = Rs.37, 7 kilometers = Rs.47, 10 kilometers = Rs.62. A small order fee of Rs.10 will apply for a food bill less than Rs.200.</string>
    <string name="q2">Q2. What are your payment methods?</string>
    <string name="a2">A2. You can pay via credit card, debit card, net banking, online wallets like PayTm, PayPal, GooglePay, or you can simply opt for Cash on Delivery.</string>
    <string name="q3">Q3. How will my order be delivered?</string>
    <string name="a3">A3. Orders will be delivered as per the delivery details mentioned while ordering your product. Our delivery personnel will reach out to you in the promised time/SLA. Please write to khazanaassist@khazana.in if the product is not delivered by the promised time.</string>
    <string name="q4">Q4. When can I order?</string>
    <string name="a4">A4. KHAzANA is accepting orders 24/7 but the shops may differ from day to night as most restaurants have their own open and close timings.</string>
    <string name="q5">Q5. How much can I order at once?</string>
    <string name="a5">A5. There is no upper limit on how much you can order at once but the minimum cart value should be Rs.100 and for no order fee should be Rs.200.</string>
    <string name="you_do_not_have_any_favourite_restaurants">You do not have any favourite restaurants</string>
    <string name="john_doe">John Doe</string>
    <string name="_91_1115555555">+91–1115555555</string>
    <string name="jonathoan_doe_gmail_com">jonathoan.doe@gmail.com</string>
    <string name="noida">Noida</string>
    <string name="your_previous_orders_are_listed_below">Your previous orders are listed below:</string>
    <string name="you_haven_t_placed_any_orders_yet">You haven\'t placed any orders yet</string>
    <string name="your_order_has_been_successfully_placed">Your order has been successfully placed!</string>
    <string name="ok">OK</string>
    <string name="dash">-</string>
    <string name="name">Name</string>
    <string name="cost">Cost</string>
    <string name="name_of_restaurant">Name of Restaurant</string>
    <string name="_4_5">4.5</string>
    <string name="restaurant_name">Restaurant Name</string>
    <string name="date">Date</string>
    <string name="_1">1</string>
    <string name="item_name">Item Name</string>
    <string name="rs_299">Rs. 299</string>
    <string name="add">Add</string>
    <string name="remove">Remove</string>
    <string name="home">Home</string>
    <string name="my_profile">My Profile</string>
    <string name="favourite_restaurants">Favourite Restaurants</string>
    <string name="order_history">Order History</string>
    <string name="faqs">FAQs</string>
    <string name="log_out">Log Out</string>
</resources>
