<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.FAQFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:id="@+id/txtQ1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/q1_how_much_is_your_delivery_fee"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/txtA1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:text="@string/a1"
                android:textColor="#000000"
                android:textSize="18sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="#c0c0c0" />

            <TextView
                android:id="@+id/txtQ2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="10dp"
                android:text="@string/q2"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/txtA2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:text="@string/a2"
                android:textColor="#000000"
                android:textSize="18sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="#c0c0c0" />

            <TextView
                android:id="@+id/txtQ3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="10dp"
                android:text="@string/q3"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/txtA3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:text="@string/a3"
                android:textColor="#000000"
                android:textSize="18sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="#c0c0c0" />

            <TextView
                android:id="@+id/txtQ4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="10dp"
                android:text="@string/q4"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/txtA4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:text="@string/a4"
                android:textColor="#000000"
                android:textSize="18sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="#c0c0c0" />

            <TextView
                android:id="@+id/txtQ5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/q5"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/txtA5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:text="@string/a5"
                android:textColor="#000000"
                android:textSize="18sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginBottom="15dp"
                android:background="#c0c0c0" />

        </LinearLayout>

    </ScrollView>

</FrameLayout>