<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#ffffff">

    <LinearLayout
        android:id="@+id/llContent"
        android:layout_width="match_parent"
        android:layout_height="85dp"
        android:orientation="horizontal"
        android:weightSum="6"
        tools:ignore="UselessParent">

        <TextView
            android:id="@+id/txtResDetailsItemNumber"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_weight="0.8"
            android:text="@string/_1"
            android:textAlignment="center"
            android:textSize="18sp" />

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="5.1">

            <TextView
                android:id="@+id/txtItemName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/item_name"
                android:textColor="#000000"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/txtResDetailPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtItemName"
                android:padding="5dp"
                android:text="@string/rs_299"
                android:textSize="15sp" />

        </RelativeLayout>

        <Button
            android:id="@+id/btnAddToFav"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginTop="20dp"
            android:layout_weight="0.1"
            android:background="@color/colorPrimary"
            android:text="@string/add"
            android:textColor="#ffffff"
            android:visibility="visible" />

        <Button
            android:id="@+id/btnRemoveFromFav"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginTop="20dp"
            android:layout_weight="0.1"
            android:background="@color/colorAccent"
            android:text="@string/remove"
            android:textColor="#ffffff"
            android:visibility="gone" />

    </LinearLayout>

</RelativeLayout>