<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorOfLogo"
    android:orientation="vertical"
    tools:context=".activity.RegistrationActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbarRegistration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorOfLogo"
            android:minHeight="?attr/actionBarSize"
            android:theme="@style/ThemeOverlay.AppCompat.Dark"
            app:layout_scrollFlags="scroll|enterAlways" />
    </com.google.android.material.appbar.AppBarLayout>

    <EditText
        android:id="@+id/etRegName"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="5dp"
        android:background="#ffffff"
        android:drawableStart="@drawable/ic_name"
        android:hint="@string/name_min_3_characters"
        android:inputType="text"
        android:maxLines="1"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/etRegEmail"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="5dp"
        android:background="#ffffff"
        android:drawableStart="@drawable/ic_email"
        android:hint="@string/email_address"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/etRegPhone"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="5dp"
        android:background="#ffffff"
        android:drawableStart="@drawable/ic_mobile"
        android:hint="@string/mobile_number_10_digits"
        android:inputType="phone"
        android:maxLength="10"
        android:maxLines="1"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/etRegAddress"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="5dp"
        android:background="#ffffff"
        android:drawableStart="@drawable/ic_delivery"
        android:hint="@string/delivery_address"
        android:inputType="textPostalAddress"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/etRegPwd"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="5dp"
        android:background="#ffffff"
        android:drawableStart="@drawable/ic_lock"
        android:hint="@string/password_min_4_characters"
        android:inputType="textPassword"
        android:maxLines="1"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/etRegConfirmPwd"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="5dp"
        android:background="#ffffff"
        android:drawableStart="@drawable/ic_lock"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:maxLines="1"
        tools:ignore="Autofill" />

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@color/colorPrimaryDark"
        android:elevation="15dp"
        android:text="@string/register"
        android:textColor="#ffffff"
        android:textSize="23sp"
        android:textStyle="bold"
        tools:ignore="UnusedAttribute" />

</LinearLayout>