<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="10"
        tools:ignore="UselessParent">

        <TextView
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginTop="6dp"
            android:layout_weight="1"
            android:paddingHorizontal="10dp"
            android:text="@string/dash"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="35sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtItemName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="7.5"
            android:text="@string/name"
            android:textColor="#000000" />

        <TextView
            android:id="@+id/txtItemCost"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.5"
            android:text="@string/cost"
            android:textColor="#000000" />

    </LinearLayout>

</RelativeLayout>