<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rlForgot"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorOfLogo"
    android:orientation="vertical"
    tools:context=".activity.ForgotPasswordActivity">

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:src="@drawable/logo"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/txtMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/imgLogo"
        android:layout_margin="18dp"
        android:layout_marginTop="40dp"
        android:text="@string/enter_your_registered_mobile_number_and_email_below"
        android:textColor="#ffffff"
        android:textSize="21sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/etForgotMobileNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtMessage"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="40dp"
        android:layout_marginRight="15dp"
        android:background="#ffffff"
        android:hint="@string/mobile_number_10_digits"
        android:inputType="phone"
        android:maxLength="10"
        android:maxLines="1"
        android:padding="6dp"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/etForgotEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/etForgotMobileNumber"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="15dp"
        android:background="#ffffff"
        android:hint="@string/email_address"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:padding="6dp"
        tools:ignore="Autofill" />

    <Button
        android:id="@+id/btnForgotNext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/etForgotEmail"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="15dp"
        android:background="@color/colorPrimaryDark"
        android:padding="6dp"
        android:text="@string/next"
        android:textColor="#ffffff"
        android:textSize="18sp"
        android:textStyle="bold" />

</RelativeLayout>