<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cardRestaurant"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="6dp"
    app:cardCornerRadius="6dp">

    <RelativeLayout

        android:id="@+id/rlContent"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_margin="10dp"
        android:background="#ffffff">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardResImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardCornerRadius="6dp">

            <ImageView
                android:id="@+id/imgRestaurantImage"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:scaleType="centerCrop"
                android:src="@drawable/restaurant_default_image"
                tools:ignore="ContentDescription" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/txtRestaurantName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="50dp"
            android:layout_toEndOf="@id/cardResImage"
            android:padding="5dp"
            android:text="@string/name_of_restaurant"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imgFavButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="6dp"
            android:layout_marginEnd="2dp"
            android:padding="4dp"
            android:src="@drawable/ic_fav_button"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/txtRestaurantPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="5dp"
            android:layout_toEndOf="@id/cardResImage"
            android:padding="5dp"
            android:text="@string/rs_299"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/txtRestaurantRating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="5dp"
            android:padding="5dp"
            android:text="@string/_4_5"
            android:textColor="#ffa000"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:ignore="RelativeOverlap" />

    </RelativeLayout>
</androidx.cardview.widget.CardView>
